--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,7 @@
         </div>
         <div class="col-md-4 col-md-offset-1">
             <div class="article-info">
-                <h1><%= @article.name %></h1>
+                <h1><%= @article.headline %></h1>
                 <br>
                 <p><strong>Body:</strong></p>
                 <p><%= @article.body %></p>
