--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Button (call-to-action) -->
-    <a href="" class="navbar-wagon-item navbar-wagon-button btn">Write a post</a>
+    <a href="/articles/new" class="navbar-wagon-item navbar-wagon-button btn">Write a post</a>
   </div>
 
   <!-- Dropdown appearing on mobile only -->
