home page advance

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,39 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+.u-paddingTop40 {
+    padding-top: 40px!important;
+}
+
+.u-maxwidth1000 {
+    max-width: 1000px!important;
+}
+
+.u-foreground {
+    position: relative!important;
+    z-index: 100!important;
+}
+
+.u-relative {
+    position: relative!important;
+}
+
+.u-size12of12 {
+    width: 100%!important;
+}
+
+.u-size4of12 {
+    width: 33.33333333%!important;
+}
+
+.u-paddingRight20 {
+    padding-right: 20px;
+}
+
+.u-paddingLeft20 {
+    padding-left: 20px;
+}
+
+.u-width1020 {
+    width: 1020px;
+}
